crates/server/src/server/api/requests/snapshots/server__server__api__requests__format_range__tests__format_range_unmatched_lists-2.snap
---
source: crates/server/src/server/api/requests/format_range.rs
expression: output2
---
0+0
1 + 1
{
	2 + 2
}
3+3
